--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -169,8 +169,9 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .title_r i { font-size:14px; color:#999; font-style:normal; margin-left:20px;}
 
 .ex_two { padding:20px; border-bottom:1px solid #ddd;}
-.ex_user { float:left; width:68px; height:68px; margin-right:20px;}
+.ex_user { float:left; width:68px; height:68px; margin-right:20px; position:relative;}
 .ex_user img { width:100%; height:100%;}
+.ex_user span { position:absolute; right:-8px; top:-8px;height:20px; width:20px; border-radius:20px; -moz-border-radius:20px; -webkit-border-radius:20px; background:#ff3300; display:block; text-align:center; color:#fff; line-height:20px; font-size:12px;}
 .ex_word { width:770px; float:left;}
 .ex_word h4 { font-size:18px; margin:8px 0;}
 .ex_word em { color:#999; margin-right:20px; font-style:normal;}
@@ -190,8 +191,8 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .botton2 { width:140px; margin-left:220px; margin-bottom:20px;}
 .botton2 a { display:block; text-align:center; color:#fff; background:#01ab30;  padding:10px 0; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
 .botton2 a:hover { display:block; text-align:center; color:#fff; background:#02a32e; }
-.botton3 { float:left;}
 .w_200 { width:200px;}
+.botton3 { float:left;}
 .botton3 a { display:block; text-align:center; color:#fff; background:#01ab30; padding:10px 20px; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
 .botton3 a:hover { display:block; text-align:center; color:#fff; background:#02a32e;}
 
@@ -216,7 +217,6 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .q_shuru { padding-left:88px; line-height:24px; margin-top:20px;}
 .textarea_q { width:95%; height:50px; border:1px solid #ddd; padding:2%; line-height:24px; background:#f3f3f3;}
 .q_shuru1 { padding-left:128px; line-height:24px; margin-top:20px;}
-
 
 .q_reply { padding-left:88px; margin:20px 0px 0px;}
 .q_reply_top { margin-bottom:5px;}
@@ -332,41 +332,108 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 
 /*前台*/
 .top_bg { width:100%; height:40px; background:#f3f3f3;}
-.top_nav { width:1100px; margin:0 auto; line-height:40px;}
+.top_con { width:1100px; margin:0 auto; }
+.top_nav { float:left; width:550px; line-height:40px;}
 .top_nav a { color:#2490eb; margin:0 3px;}
 .top_nav a:hover { color:#1f88e0;}
+.search { padding:5px 0;width:548px; height:30px; float:left;} 
+.input_search { border:1px solid #e7e7e7; height:28px; line-height:28px; width:200px;padding-left:10px; display:block; float:right; font-size:12px;}
+.search_botton { float:right;}
+.search_botton a { display:block; text-align:center; color:#fff; background:#01ab30; padding:6px 10px; line-height:18px; height:18px; font-size:12px;}
+.search_botton a:hover {background:#02a32e;}
 
 .headerbg { width:100%; height:100px; background:#fff;}
 .header { width:1100px; height:100px; margin:0 auto; }
 .logo { height:40px; width:165px;  padding:30px 0; float:left;}
+.logo_info { float:left; font-size:22px; margin-left:20px; line-height:40px; color:#666; padding:30px 0;}
 .navbar  {float:right; height:40px; padding:30px 0;}
 .navbar li { float:left; padding:5px 10px;}
 .navbar li.em_line { float:left; width:1px; margin:0 10px; font-size:14px; color:#ccc;}
 .navbar a,.navbar a:hover { display:block; padding:0 5px; text-align:center; }
 .navbar a h3 { font-size:15px; color:#333; margin-bottom:3px; text-align:center; line-height:1em;}
-.navbar a p { font-size:6px; color:#999;text-align:center; line-height:1em;}
+.navbar a p { font-size:12px; color:#999;text-align:center; line-height:1em;}
 .navbar a:hover h3 {color:#2490eb;}
 .navbar a:hover p { color:#2490eb;}
-.active { display:block; text-align:center; border-bottom:2px solid #2490eb;}
-.active a h3,.active a:hover h3{ color:#333; }
-.active a p,.active a:hover p{ color:#999; }
+.active_index { display:block; text-align:center; border-bottom:2px solid #2490eb;}
+.active_index a h3,.active a:hover h3{ color:#333; }
+.active_index a p,.active a:hover p{ color:#999; }
 .bg_white  { background:#fff;}
 
-.banner_index { width:100%; height:550px; background:#2490eb;}
-.section1 { padding:30px 0; text-align:center;}
-.title { display:inline-block; padding:0 40px; border-bottom:1px solid #e7e7e7; margin-bottom: 20px;}
+.ct-banner{width:100%;height:550px;margin:0 auto;overflow:hidden;}
+.ct-focusbox{height:550px;position:relative;overflow:hidden;}
+.ct-focusimg{height:550px;overflow:hidden;}
+.ct-fimglist{position:relative;}
+.ct-fimglist img{display:block;cursor:pointer;}
+.ct-fimglist li{width:100%; height:550px;float:left;}
+.ct-banner01{background:url(../images/ct-banner01.png) center;}
+.ct-banner02{background:url(../images/ct-banner02.png) center;}
+.ct-banner03{background:url(../images/ct-banner03.png) center;}
+.ct-banner04{background:url(../images/ct-banner04.png) center;}
+.ct-focustool{overflow:hidden;position:relative;top:-97px;height:97px;background:url(../images/bg_touming.png) repeat-x;}
+.ct-ftoollist{position:relative;margin-left:282px;}
+.ct-ftoollist li{width:121px;height:54px;float:left;cursor:pointer; margin-left:10px;margin-top:21px;}
+.ct-ftoollist .on a{width:121px;height:54px;display:block;margin-right:-4px;z-index:100;top:-5px;border:2px solid #FFF;}
+.w1100 { width:1100px !important;margin:0 auto;}
+
+.scroll-outer {height:480px; background:#fff;}
+#scroll{width:1100px;margin:0 auto;padding-top:20px;font-family:"Microsoft Yahei";}
+#scroll .owl-wrapper-outer{margin:0 auto;}
+#scroll .item { position:relative;width:250px;height:300px;margin:0 auto;background-color:#fff;overflow:hidden; border:1px solid #ddd;}
+#scroll .item img { width:250px; height:200px;}
+#scroll .shd{position:absolute;left:0;top:0;width:100%;height:100%;background-color:rgba(0, 0, 0, 0.15);}
+#scroll .shd a{display:block;width:250px;height:200px;*background-image:url(about:blank);background-image:url(about:blank)\0;}
+#scroll .txt{position:absolute;left:0;bottom:0;width:226px;height:100px;padding:0 12px;color:#999; background-color:#fff\9;background-color:rgba(255, 255, 255, 1);}
+#scroll h3{width:226px;height:25px;margin-bottom:6px;padding-top:6px;font:700 18px/25px arial,"Microsoft Yahei";overflow:hidden;}
+#scroll h3 a{color:#333;text-decoration:none;}
+#scroll h3 a:hover{color:#2490eb;}
+#scroll p{width:226px;height:54px;line-height:18px;font-size:14px;}
+#scroll .item:hover .shd{background-color:rgba(0, 0, 0, 0);}
+#scroll .item:hover .txt{background-color:#fff\9;background-color:rgba(255, 255, 255, 1);}
+.owl-theme .owl-controls .owl-buttons div{position:absolute;top:130px;width:30px;height:60px;margin:0;padding:0;border-radius:0;font:60px/60px "宋体";overflow:hidden;_display:none;}
+.owl-theme .owl-controls .owl-buttons .owl-prev{left:-40px;}
+.owl-theme .owl-controls .owl-buttons .owl-next{right:-40px;}
+.owl-theme .owl-controls .owl-buttons .owl-prev:before{content:"<";}
+.owl-theme .owl-controls .owl-buttons .owl-next:before{content:">";}
+.title { text-align:center;width:1100px; margin:0 auto; padding:40px 0 10px;}
 .title h1 { font-weight:bold; margin-bottom:5px;text-align:center;}
-.title h6 { color:#bbb; text-align:center;}
-.section1 li { width:348px;float:left; text-align:center; border:1px solid #e7e7e7;}
-.mr_20 { margin-right:25px;}
-.section1 h4 { color:#333;text-align:center; padding:10px 10px 0;}
-.section1 h6 { color:#999;text-align:center; padding:0 10px 10px;}
-.section1 li:hover { cursor:pointer;}
-.section1 li:hover h4 { color:#44b336;text-align:center; padding:10px 10px 0;}
-.section1 li:hover h6 { color:#44b336;text-align:center; padding:0 10px 10px;}
+.title h6 { display:inline-block; color:#bbb; text-align:center; border-bottom:1px solid #e7e7e7;}
 
+.wrapper1 { background:#f3f3f3; width:100%;}
+.section1 {text-align:center;}
+.s1_con { margin-top:20px; text-align:left; padding-bottom:10px;}
+.s1_left { width:500px; margin-right:100px; float:left;}
+.s1_right { width:500px; float:left;}
+.news_list { margin-bottom:30px;}
+.date { margin-right:10px; float:left;}
+.month { float:left;}
+.month  span { background:#ccc; text-align:center; font-size:12px; color:#fff; width:20px; height:17px; line-height:17px; display:block; margin-bottom:1px;}
+.day  { float:left; width:36px; height:36px; line-height:36px; background:#ccc; text-align:center; font-size:16px; color:#fff; margin-left:1px;}
+.news_index_con { float:left;}
+.news_index_img { width:110px; height:70px; float:left; margin-right:10px; border:1px solid #eee;}
+.news_index_img img { width:100%; height:100%;}
+.news_index_word { width:310px; float:left;}
+.news_index_word p { color:#999; font-size:14px; line-height:1.4em; margin-top:5px;}
 
-.banner_news { width:100%; height:260px; background:#2490eb;}
+.system { background:#2490eb; height:500px; width:100%;}
+.system_con{ width:1100px; margin:0 auto;}
+.system_word { width:500px; float:right; padding:70px 0;}
+.system_word h1 { color:#fff; margin-bottom:30px; font-weight:bold;}
+.system_word p { color:#fff; margin-bottom:30px;}
+.botton4 a { display:block; width:150px; padding:10px 20px; background:#ffc200; color:#fff; font-size:18px; text-align:center; border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px; }
+.botton4 a:hover {  background:#ff9900;}
+
+.s2_con { width:1100px; margin:0 auto; padding-bottom:30px;}
+.mr_frbox{ padding:30px 0;}
+.mr_frBtnL{ float:left;margin:150px 22px 0px 0px;cursor:pointer;display:inline;}
+.mr_frUl{ float:left;height:430px;width:1000px;}
+.mr_frBtnR{float:right;margin-top:150px;cursor:pointer;}
+.mr_frUl ul { height:400px;}
+.mr_frUl ul li{display:inline;float:left;width:175px;margin-right:25px;overflow:hidden;}
+.mr_frUl ul li p { display:block;margin-bottom:18px; border:1px solid #ddd;}
+.mr_frUl ul li img{width:100%; height:100%; }
+
+/*news*/
+.banner_news { width:100%; height:360px; background:#2490eb;}
 .news { border-bottom:1px solid #ddd; padding:30px 0;}
 .news_img { width:250px; height:156px; float:left;}
 .news_img img { width:100%; height:100%;}
@@ -392,7 +459,18 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .tab_title a:hover { line-height:51px; padding:0 10px; border-bottom:3px solid #2490eb; color:#2490eb;line-height:51px;font-size:16px;}
 .tab_hot a,.tab_hot a:hover { line-height:51px; border-bottom:3px solid #2490eb; color:#2490eb;line-height:51px; padding:0 10px;font-size:16px;}
 
+/*course*/
+.banner_course {width:100%; height:360px; background:#2490eb;}
+.re_one { width:260px; border:1px solid #ddd; margin-bottom:30px; float:left;}
+.re_one_right { margin-right:17px;}
+.re_one_img { width:260px; height:150px;}
+.re_one_img img { width:100%; height:100%;}
+.re_one_word { padding:10px;}
+.re_one_word h3 { font-size:20px; margin-bottom:5px;}
+.re_one_word p { color:#999; line-height:1.5em;}
+
 /*professional_resources*/
+.banner_res { width:100%; height:360px; background:#2490eb;}
 .two_con { padding:30px 0;}
 .re_two { width:350px; border:1px solid #ddd; margin-bottom:30px; float:left;}
 .re_right { margin-right:22px;}
@@ -406,7 +484,28 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .more_botton a:hover {background:#02a32e;}
 .pb_20 { padding:20px 0;}
 
+/*about*/
+.banner_about { width:100%; height:360px; background:#2490eb; }
+.s_about_left { width:500px; float:left; margin-right:50px; padding:50px 0;}
+.s_about_left h1 { font-weight:bold; margin-bottom:5px;text-align:right; color:#333;}
+.s_about_left h6 { display:block; color:#999; text-align:right; margin-bottom:20px;}
+.s_about_right { width:550px; float:left;}
+.s_about_right img { width:100%; height:100%;}
+.wrapper2 { background:#2490eb; width:100%; color:#fff;}
+.s_about { padding:10px 0 30px;}
+.s_about_one { width:340px; float:left;}
+.s_mr { margin-right:40px;}
+.s_about_one h3 { font-size:18px; color:#fff; margin-bottom:10px;}
+.s_about_one p { color:#fff;}
+.s_title { text-align:center;width:1100px; margin:0 auto; padding:40px 0 10px;}
+.s_title h1 { font-weight:bold; margin-bottom:5px;text-align:center; color:#fff;}
+.s_title h6 { display:inline-block; color:#fff; text-align:center; border-bottom:1px solid #e7e7e7;}
+.s_about li { width:178px; border:1px solid #ddd; padding:10px; float:left;}
+.s_about li img { width:178px; height:280px;}
+.mr_li { margin-right:25px;}
 
+
+/*登录*/
 .b_top { border-top:1px solid #ddd;} 
 .login_img { float:left; width:635px; padding:60px 0;}
 .login { width:360px;border:1px solid #ddd; margin:60px 50px 50px 50px; float:left;}
