--- a/front_style/ppt_word/css/MPreview.css
+++ b/front_style/ppt_word/css/MPreview.css
@@ -16,7 +16,7 @@
 
 /* Media-box .tool-bar */
 .MPreview-box .tool-bar { position: absolute; width: 70px; height: 28px; padding-top: 10px; top: 0px; right: 0px; z-index: 28; -webkit-user-select: none; -moz-user-select: none; }
-.MPreview-box .MPreview-mediaPlay { width: 100%; overflow: hidden; -webkit-user-select: none; -moz-user-select: none; background:url(../images/loading.gif) no-repeat center center; }
+.MPreview-box .MPreview-mediaPlay { width: 100%; overflow: hidden; -webkit-user-select: none; -moz-user-select: none; /* background:url(../images/loading.gif) no-repeat center center; */ }
 .MPreview-box .MPreview-mediaView { width: 100%; text-align: center; }
 .MPreview-box .MPreview-mediaView img { max-width: 100%; }
 .MPreview-box .tool-bar ul { padding-right: 20px; }
@@ -89,7 +89,7 @@
 /* Media-PPT */
 .MPreview-ppt .MPreview-mediaPlay { bottom: 51px; }
 .MPreview-ppt .MPreview-mediaView { width: auto; height: 100%; text-align: left; -webkit-transition: all .5s; transition: all .5s; }
-.MPreview-ppt .MPreview-mediaView div { float: left; text-align: center; width: 100%; height: 100%; background: #FFF url(../images/loading.gif) no-repeat center center; }
+.MPreview-ppt .MPreview-mediaView div { float: left; text-align: center; width: 100%; height: 100%;/*  background: #FFF url(../images/loading.gif) no-repeat center center; */ }
 .MPreview-ppt .MPreview-mediaView img { max-width: 100%; max-height: 100%; }
 .MPreview-ppt .tool-bar { width: 50px; }
 .MPreview-ppt .MPreview-scrollBar { top: auto; bottom: 25px; width: 100%; height: 15px; border-left: 0 none; border-top: 1px solid #DDD; }
