--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -106,7 +106,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .two_t h5 { background:url(../images/ico.png) no-repeat 0px -24px;padding-left:30px; height:24px; line-height:20px;}
 .three_t h5{ background:url(../images/ico.png) no-repeat 0px -48px;padding-left:30px; height:24px; line-height:20px;}
 .four_t h5{ background:url(../images/ico.png) no-repeat 0px -72px;padding-left:30px; height:24px; line-height:20px;}
-.mr_15 { margin-right:10px;}
+.mr_15 { margin-right:15px;}
 .ziliao { padding:20px 0 0;}
 .ziliao_img { width:268px; height:154px; position:relative; border:1px solid #eee;}
 .ziliao_img img { width:100%; height:100%;} 
@@ -193,8 +193,17 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .input_c { padding:20px 20px 0px;}
 .input_word { width:200px; float:left; text-align:right; margin-right:20px; line-height:40px;}
 .input_text { width:500px; float:left;}
+.input_d { width:700px; float:left;}
+.k_s { line-height:40px; background:#f3f3f3; padding-left:10px;}
+.duoxuan {padding:10px 0; border-bottom:1px dashed #ddd;}
+.input_d ul{ float:left; width:600px; }
+.input_d li { float:left; line-height:30px; margin-right:30px; display:inline-block;}
+.input_check { margin-right:5px;float:left; height:24px; margin:3px 5px 3px 0;}
+.quan { float:right; }
+.quan a {padding:5px 10px; background:#eee; border:1px solid #ddd;border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
+.quan a:hover { background:#ddd;}
 .input_k { border:1px solid #e7e7e7; height:40px; line-height:40px; width:400px; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;padding-left:10px; display:block;}
-.select_k { border:1px solid #e7e7e7; height:40px; line-height:20px; width:415px; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;padding-left:10px;}
+.select_k { border:1px solid #e7e7e7; height:40px; line-height:40px; width:415px; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;padding-left:10px;}
 .select_k option { line-height:40px;}
 .botton2 { width:140px; margin-left:220px; margin-bottom:20px;}
 .botton2 a { display:block; text-align:center; color:#fff; background:#57b02c;  padding:10px 0; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
