--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -77,7 +77,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .left-sider .ser-online a { margin-top:10px; height:75px; border:1px solid #eaeaea; display:block; }
 
 .right_w { width:878px; min-height:500px; border:1px solid #ddd;background:#fff; float:right; margin:20px 0;}
-.title_r { padding:20px;color:#333;border-bottom:1px solid #ddd; font-size:16px;}
+.title_r { padding:20px;color:#333;border-bottom:1px solid #ddd; font-size:16px;margin-bottom: 5px;}
 .right_con { padding:0px 19px; width:840px;}
 .one { border-bottom:1px solid #ddd; padding:20px 0;}
 .one_img { width:248px; height:154px; float:left; border:1px solid #eee;}
@@ -437,7 +437,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .mr_frUl ul { height:300px;}
 .mr_frUl ul li{ display:block;float:left;width:190px;margin-right:30px;}
 .mr_frUl ul li p { display:block; margin-bottom:18px; border:1px solid #ddd; background:#fff;}
-.mr_frUl ul li img{width:100%; height:100%; }
+/* .mr_frUl ul li img{width:100%; height:100%; } */
 
 /*news*/
 .banner_news { width:100%; height:360px; background:url(../images/banner_n.jpg) no-repeat center center;}
