--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -448,7 +448,10 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .news_img { width:250px; height:156px; float:left;}
 .news_img img { width:100%; height:100%;}
 .news_word { padding:5px 0px 5px 20px; float:left; width:930px;}
-.news_word h3 { font-size:18px; color:#333; line-height:1.5em; margin-bottom:6px;}
+.news_word h3 a { font-size:18px; color:#333; line-height:1.5em; margin-bottom:6px;}
+.news_word h3 a:HOVER{
+	color:#57b02c;
+}
 .news_word p { color:#666; line-height:1.5em; margin-bottom:10px;}
 .news_botton { float:right; padding-right:20px;}
 .news_botton a { display:block; width:80px; padding:5px 10px; background:#57b02c; color:#fff; text-align:center; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
