--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -440,7 +440,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .mr_frUl ul { height:230px;}
 .mr_frUl ul li{ display:block;float:left;width:190px;margin-right:30px;}
 .mr_frUl ul li p { display:block; margin-bottom:30px; border:1px solid #ddd; background:#fff;}
-.mr_frUl ul li img{width:100px;; height:100px; }
+.mr_frUl ul li img{width:100%; height:100%; }
 
 /*news*/
 .banner_news { width:100%; height:360px; background:url(../images/banner_n.jpg) no-repeat center center;}
