--- a/front_style/ppt_word/css/base.css
+++ b/front_style/ppt_word/css/base.css
@@ -46,5 +46,5 @@ table {
 /* common */
 body { font-size: 14px; line-height: 1.6; color: #333; font-family:"Microsoft Yahei", Arial; background: #F2F2F2; }
 .wrapper { width: 1000px; margin: 50px auto; }
-.doc { width: 1000px; height: 800px; margin: 0px auto; }
+.doc { width: 100%; height: 800px; margin: 0px auto; }
 .ppt { width: 1000px; height: 800px; margin: 0px auto; }
