--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -116,11 +116,11 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .mr_15 { margin-right:10px;}
 .ziliao { padding:20px 0 0;}
 .ziliao_img { width:268px; height:154px; position:relative; border:1px solid #eee;}
-.ziliao_img img { width:100%; height:100%;}
+ .ziliao_img img { width:100%; height:100%;} 
 
-.ziliao1 { padding:20px 0 0;}
-.ziliao_img { width:154px; height:154px; position:relative; border:1px solid #eee;}
-.ziliao_img img { width:100%; height:100%;}
+/* .ziliao1 { padding:20px 0 0;} */
+/* .ziliao_img { width:154px; height:154px; position:relative; border:1px solid #eee;} */
+/* .ziliao_img img { width:100%; height:100%;} */
 .ziliao1 li { float:left; width:154px; margin-bottom:20px;}
 .ziliao1 p { text-align:center; color:#999; padding:5px 10px; line-height:1.4em; height:20px;}
 .p_shipin { position:absolute; top:0px; left:0px; width:100%; height:100%; background-color:#000; background-color:rgba(0,0,0,0.4); filter:Alpha(opacity=0.4);}
