--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -655,7 +655,13 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .footer .footer_nav li { display:inline-block; padding:0 20px; border-right:1px solid #999;color:#999; text-align:center; height:14px; line-height:14px;  font-size:12px;}
 .footer p { color:#999; text-align:center; margin:0px; padding-bottom:5px;  font-size:12px;}
 .footer a,footer a:hover { color:#999; line-height:14px;}
-
+.main{width:1200px;margin:40px auto;}
+.main_con{width: 276px;height: 200px;float: left;margin-bottom: 30px;position: relative;cursor: pointer;}
+.main_r { margin-right: 32px;}
+.main_con img{width:276px;height: 200px;}
+.main_txt{ position: absolute;left: 0;bottom: 0;width:100%;height:40px;line-height: 40px;text-align: center; filter:alpha(Opacity=60);  background: rgba(0, 0, 0, 0.6) !important; -moz-opacity:0.6;-khtml-opacity: 0.6;color: #fff; overflow:hidden;}
+.main_txt h3{font-weight: normal; padding:0 15px; color:#fff;}
+.main_txt p{font-size: 14px;display: block;line-height: 20px; padding:5px 15px; color:#fff;}
 
 
 
