--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -96,11 +96,11 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
     float: left;}
 .botton1 a { display:block; width:80px; padding:5px 10px; background:#57b02c; color:#fff; text-align:center; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
 .botton1 a:hover { display:block; width:80px; padding:5px 10px; background:#62c433; color:#fff; text-align:center; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
-
+/* 
 .botton2 { margin:10px 0;}
 .botton2 a { display:block; width:80px; padding:5px 10px; background:#57b02c; color:#fff; text-align:center; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
 .botton2 a:hover { display:block; width:80px; padding:5px 10px; background:#62c433; color:#fff; text-align:center; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
-
+ */
 .mod {border-bottom:1px solid #ddd; padding:20px 0;}
 .mod_word { padding:5px 20px; float:left;width:640px;}
 .mod_word h3 { font-size:18px; color:#333; line-height:1.5em; margin-bottom:6px;}
