--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -67,7 +67,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .operate ul li .selected { background-color:#2490eb;  background-position:270px -9px; color:#fff;}
 .operate ul li .selected a{ color:#fff;}
 .operate ul li .selected a:hover{ color:#fff;}
-.operate ul li { border-bottom:1px dotted #d2d2d2; display:inline-block; width:100%; position: relative; min-height:48px; _height:48px; z-index: 10; zoom:1 }
+.operate ul li { border-bottom:1px dotted #d2d2d2; display:inline-block; width:100%; position: relative; min-height:48px; _height:48px;  zoom:1 }
 .operate ul li h4 { cursor:pointer; background:url(../images/bg3.png) no-repeat 270px 22px; padding-left:30px; text-decoration:none; font-size:14px; color:#555; display:block;  line-height:48px; font-weight:normal;}
 .operate ul li h5 { cursor:pointer; padding-left:30px; text-decoration:none; font-size:14px; color:#555; display:block;  line-height:48px; font-weight:normal;}
 .operate ul li.noline { border-bottom:none; }
@@ -400,7 +400,7 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .ct-banner03{background:url(../images/ct-banner03.jpg) center;}
 .ct-banner04{background:url(../images/ct-banner04.jpg) center;}
 .ct-focustool{overflow:hidden;position:relative; top:-97px;height:97px;background:url(../images/bg_touming.png) repeat-x;}
-.ct-ftoollist{ position:relative;margin-left:40%;}
+.ct-ftoollist{ position:relative;margin-left:30%;}
 .ct-ftoollist li{width:121px;height:54px;float:left;cursor:pointer; margin-left:10px;margin-top:21px;}
 .ct-ftoollist .on a{width:121px;height:54px;display:block;margin-right:-4px;z-index:100;top:-5px;border:2px solid #FFF;}
 .w100 { width:100% !important;margin:0 auto;}
@@ -470,8 +470,8 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .mr_frBtnR{ float:right;margin-top:75px;cursor:pointer;}
 .mr_frUl ul { height:230px;}
 .mr_frUl ul li{ display:block;float:left;width:190px;margin-right:30px;}
-.mr_frUl ul li p { display:block; margin-bottom:30px; border:1px solid #ddd; background:#fff;}
-.mr_frUl ul li img{width:188px; height:80px; }
+.mr_frUl ul li p { display:block; margin-bottom:30px; border:1px solid #ddd; background:#fff;height:80px;}
+.mr_frUl ul li img{width:188px;height:80px;}
 
 /*news*/
 .banner_news { width:100%; height:360px; background:url(../images/banner_n.jpg) no-repeat center center;}
