--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -276,7 +276,8 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .stu_top_right { float:right;}
 .input_stu { width:250px; height:30px; line-height:30px; border:1px solid #ddd; float:left; margin-right:20px; padding:5px 10px;}
 .tijiao { width:100px; float:left; height:40px; line-height:40px; background:#2490eb; color:#fff; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
-
+.select_c { width:200px; height:41px; line-height:41px; border:1px solid #ddd; float:left; margin-right:20px; padding:0 10px; color:#999}
+.select_c option { line-height:40px; height:40px;}
 .stu_con { background:#fff; border:1px solid #ddd; margin:20px 0;} 
 .stu_con table { margin:0px; padding:0px;}
 .stu_con td { border-left:1px solid #ddd; border-bottom:1px solid #ddd; padding:7px 10px; text-align:center; color:#666;}
@@ -663,6 +664,5 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .main_txt{ position: absolute;left: 0;bottom: 0;width:100%;height:40px;line-height: 40px;text-align: center; filter:alpha(Opacity=60);  background: rgba(0, 0, 0, 0.6) !important; -moz-opacity:0.6;-khtml-opacity: 0.6;color: #fff; overflow:hidden;}
 .main_txt h3{font-weight: normal; padding:0 15px; color:#fff;}
 .main_txt p{font-size: 14px;display: block;line-height: 20px; padding:5px 15px; color:#fff;}
-
 
 
