--- a/front_style/css/style.css
+++ b/front_style/css/style.css
@@ -40,9 +40,9 @@ h6 { font-size:12px; font-weight:normal; padding:0px; margin:0px;}
 .active_tea { display:block; color:#2490eb; text-align:center;}
 .active_tea a{ color:#2490eb;}
 .active_tea a:hover { color:#2490eb; }
-.user_tea { float:left; margin-left:10px; padding:10px 0;}
-.user_tea_img { width:30px; height:30px; float:left;border-radius:30px;-moz-border-radius:30px; -webkit-border-radius:30px;}
-.user_tea_img img { width:100%; height:100%;border-radius:30px;-moz-border-radius:30px; -webkit-border-radius:30px;}
+.user_tea { float:left; margin-left:10px; padding:10px 0px;}
+.user_tea_img { width:200px;  height:50px; float:left;border: 0px;}
+.user_tea_img img { width:100%; height:100%;border: 0px;}
 .down_tea { line-height:30px; float:left; margin-left:10px; color:#fff;}
 .tea_out a {float:right; height:60px; line-height:60px; text-align:center; font-size:12px; color:#333;  padding:0 20px; background:url(../images/down.png) no-repeat right center; background-size:12px 12px;}
 
